# ICC

./: .gitignore  CMakeLists.txt  License  README.md  install.sh
characters/: ground.xml  humanoid.xml
configurations/: chicken.xml  walkrunfall.xml
environment/: CMakeLists.txt  Character.cpp  Character.h  Configurations.h  Environment.cpp  Environment.h  MultiActorEnvironment.cpp  MultiActorEnvironment.h  ReferenceManager.cpp  ReferenceManager.h  SkeletonBuilder.cpp  SkeletonBuilder.h  ThrowingBall.cpp  ThrowingBall.h  Utils.cpp  Utils.h
environment_wrapper/: CMakeLists.txt  EnvironmentWrapper.cpp  EnvironmentWrapper.h
interactive/: CMakeLists.txt  InteractiveWindow.cpp  InteractiveWindow.h  main.cpp
motions/chicken/data/: explore_summary
motions/chicken/train/: network.data-00000-of-00002  network.index
output/chicken/: asWeights.npy  network-smax.index  network.index  parameters  results
output/chicken/rms/: mean.npy  mean_rmax.npy  var.npy  var_smax.npy
output/chicken/trajectory/: goal.npy  traj.npy
policy/: AdaptiveSampler.py  CharacterConfigurations.py  Configurations.py  FollowReference.py  PPO.py  ReplayBuffer.py  TrackingController.py  TrackingController.py.bak  TrajectoryManager.py  Utils.py  follow.py  play.py  rnn_test.py  run_result.py  test.py  train.py  train_mg.py
policy/rl/: AdaptiveSampler.py  Configurations.py  RunningMeanStd.py  TrackingController.py
policy/rnn/: Configurations.py  Configurations_old.py  MotionGenerator.py  RNNConfig.py  RNNController.py  RNNListTraining.py  RNNManager.py  RNNModel.py  RNNTest.py  RNNTraining.py
policy/util/: Pose2d.py  TensorflowUtils.py  Util.py  dataLoader.py
renderer/: CMakeLists.txt  Camera.cpp  Camera.h  DART_interface.cpp  DART_interface.h  GLUTWindow.cpp  GLUTWindow.h  GLfunctions.cpp  GLfunctions.h  SimWindow.cpp  SimWindow.h  fragshader.txt  main.cpp  vertexshader.txt
